--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/nsisodiya/node-blocks/issues"
   },
-  "homepage": "https://github.com/nsisodiya/node-blocks#readme"
+	"homepage": "https://github.com/nsisodiya/node-blocks#readme",
+	"devDependencies": {
+		"babel-core": "6.4.0",
+		"babel-loader": "6.2.1",
+		"babel-preset-es2015": "6.3.13",
+		"webpack": "1.12.10"
+	}
 }
