--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "node-blocks",
-  "version": "1.0.0",
-  "description": "Flow Based Programming with JavaScript",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nsisodiya/node-blocks.git"
-  },
-  "author": "Narendra Sisodiya <narendra@narendrasisodiya.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/nsisodiya/node-blocks/issues"
-  },
+	"name": "node-blocks",
+	"version": "1.0.0",
+	"description": "Flow Based Programming with JavaScript",
+	"main": "dist/node-blocks.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/nsisodiya/node-blocks.git"
+	},
+	"author": "Narendra Sisodiya <narendra@narendrasisodiya.com>",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/nsisodiya/node-blocks/issues"
+	},
 	"homepage": "https://github.com/nsisodiya/node-blocks#readme",
 	"devDependencies": {
 		"babel-core": "6.4.0",
